feat: 替换过期的Base64jar包